--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
             <div id="post">
                 <h1>Aqui&iacute; inicia la historia de un gran proyecto </h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="imagenes/equipo.jpg" width="100%"/></p>
+                <p><img src="https://i.imgur.com/a/Ia9G4uy.jpg" width="100%"/></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&Aacute;s que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
