--- a/blogpost.html
+++ b/blogpost.html
@@ -8,12 +8,12 @@
             <div id="cabecera">
                 <img id="logo" src="imagenes/dragon.png" />
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Aqui&iacute; inicia la historia de un gran proyecto </h1>
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer con ramas</p>
-                <p><img src="https://static.platzi.com/media/user_upload/equipo-f86c6b2b-aa83-49c1-859c-e9bb2b9b6d58.jpg" width="100%"/></p>
+                <p><img src="https://static.platzi.com/media/user_upload/equipo-f86c6b2b-aa83-49c1-859c-e9bb2b9b6d58.jpg" width="70%"/></p>
                 <p>Los blogs son la mejor forma de compartir informaci&oacute;n y tus ideas. Mucho m&Aacute;s que ir a conferencias o salir en YouTube. Excepto si eres un rockstar. Pero estad&iacute;sticamente no lo eres... por ahora.</p>
                 <p>Suscribete y dale like</p>
             </div>
